# twzq

./: CMakeLists.txt  build.py  color.cxx  color.hxx  compile_commands.json  config.json  config_manager.cxx  config_manager.hxx  controller.hxx  hyprland_controller.cxx  hyprland_controller.hxx  main.cxx  readme.md  speltnya_color_analyzer.cxx  spletnya_color_analyzer.hxx  wallpaper_controller.cxx  wallpaper_controller.hxx  wallpaper_manager.cxx  wallpaper_manager.hxx  waybar_controller.cxx  waybar_controller.hxx  wofi_controller.cxx  wofi_controller.hxx
